welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:5: error: type mismatch;
 found   : Unit
 required: Boolean
		case (true,true) => gauche(); if (estFaceMur) {droite(); return true}
                                              ^SnakeBuggle:6: error: type mismatch;
 found   : Unit
 required: Boolean
		case (false,true)=> droite(); if (estFaceMur) {gauche(); return true}
                                              ^SnakeBuggle:31: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime99.SnakeBuggle'
override def run() {
             ^